--- a/roles/lb-tier/templates/haproxy.cfg.j2
+++ b/roles/lb-tier/templates/haproxy.cfg.j2
@@ -26,5 +26,5 @@ backend app-servers
     balance roundrobin
     option forwardfor
     {% for host in groups['apps'] %}
-    server {{ hostvars[host].inventory_hostname }} {{ hostvars[host].ansible_nodename}} cookie {{ hostvars[host].inventory_hostname }} check
+    server {{ hostvars[host].inventory_hostname }} {{ hostvars[host].ansible_nodename}}:8080 cookie {{ hostvars[host].inventory_hostname }} check
     {% endfor %}
